# op-pic

./: .gitignore  Dockerfile  LICENSE  README.md  objects.inv  searchindex.js
.doctrees/: api.doctree  developer_guide.doctree  environment.pickle  getting_started.doctree  index.doctree  introduction.doctree
advection_mpi/: Makefile  advec_defs.h  advec_misc.cpp  advec_op.cpp  kernels.h
app_cabana_opphc/: Makefile  cabana_convert_hdf5.cpp  cabana_defs.h  cabana_misc.cpp  cabana_op.cpp  cabana_op_hdf5.cpp  energy.csv  opp_hdf5.h
app_cabanapic/: CMakeLists.txt  Makefile  README.md  cabana.cpp  cabana_defs.h  cabana_misc.h  cabana_misc_mesh_loader.h  kernels.h
app_cabanapic/configs/: cabana.param
app_cabanapic_cg/: Makefile  README.md  amd_compile.sh  cabana.cpp  cabana_defs.h  cabana_opp.cpp
app_cabanapic_opphc/: cabana_defs.h  cabana_misc_part_distribution.h  cabana_op.cpp  cabana_op_hdf5.cpp  kernels.h
app_fempic/: Makefile  README.md  fempic.cpp  fempic_hdf5.cpp  fempic_misc.h  fempic_misc_mesh_colour.h  fempic_misc_mesh_loader.h  fempic_ops.cpp  field_solver.h  kernels.h
app_fempic_cg/: Makefile  README.md  accuracy.txt  amd_compile.sh  fempic.cpp  fempic_defs.h  fempic_hdf5.cpp  fempic_hdf5_opp.cpp  fempic_misc.h  fempic_misc_mesh_colour.h  fempic_misc_mesh_loader.h  fempic_opp.cpp  field_solver.h  gpu_wrapper.sh  kernels.h
app_fempic_opphc/: FESolver.cpp  FESolver.h  FESolver_cuda.cu  FESolver_hip.cpp  Makefile  fempic.cpp  fempic_defs.h  fempic_loader.h  fempic_misc.cpp  fempic_misc_mesh_colour.h  fempic_op.cpp  fempic_op_hdf5.cpp  kernels.h  opp_cluster.h  opp_hdf5_common.cpp  opp_mpi_hdf5.cpp
app_fempic_oppic/: FESolver.cpp  FESolver.h  Makefile  README.md  fempic.cpp  fempic.h  fempic_op.cpp  field_solver_original.cpp  field_solver_petsc.cpp  funcs_from_fempic.cpp  kernels.h  make_run.sh  run.sh  run_cuda.sh  run_omp.sh  run_seq.sh  validateFEMPIC.py
app_neso_advection/: Makefile  README.md  advec.cpp  advec_misc.h  kernels.h
app_neso_advection_cg/: Makefile  README.md  advec.cpp  advec_defs.h  advec_opp.cpp  kernels.h  wrap_sycl.sh
app_neso_advection_mdir_cg/: Makefile  README.md  advec.cpp  advec_misc.h  advec_opp.cpp  kernels.h
app_neso_advection_opphc/: advec_op.cpp  kernels.h
app_simpic/: README.md  funcs_from_simpic.cpp  kernels.h  simpic.cpp  simpic.h
app_simpic_cg/: Makefile  README.md  funcs_from_simpic.cpp  kernels.h  simpic_defs.h  simpic_opp.cpp
app_simpic_opphc/: kernels.h  simpic.cpp  simpic_op.cpp
app_simpic_oppic/: Makefile  README.md  funcs_from_simpic.cpp  kernels.h  make_run.sh  run.sh  simpic.cpp  simpic.h  simpic_op.cpp  validateSIMPIC.py
cabana_mpi/: Makefile  README  cabana_deck.h  (+8 more)
handcoded/app_fempic_opphc/: CMakeLists.txt
handcoded/app_fempic_opphc/cuda/: opp_loop_all__compute_node_charge_density.cu  opp_loop_all__deposit_charge_on_nodes.cu  opp_loop_all__get_max_values.cu
handcoded/app_fempic_opphc/hip/: hipkernels.cpp  opp_loop_all__compute_node_charge_density.cpp  opp_loop_inject__inject_ions.cpp
lib_oppic/: CMakeLists.txt  Makefile  oppic.cpp  oppic.h  trace.cpp  trace.h
lib_oppic/include/: Params.h  opp_cuda.h  opp_defs.h  opp_hip.h  opp_mpi.h  opp_mpi_core.h  opp_params.h  opp_profiler.h  oppic_cuda.h  oppic_hip.h  oppic_lib.h  oppic_lib_core.h  oppic_omp.h  oppic_seq.h  oppic_util.h  trace.h
lib_oppic/src/core/: Params.cpp  opp_params.cpp  oppic_lib_core.cpp  oppic_util.cpp  trace.cpp
lib_oppic/src/cuda/: increase_part_count.cu  opp_cuda.cu  opp_cuda_halo.cu  opp_cuda_kernels.cu  opp_increase_part_count.cu  opp_particle_comm.cu  opp_particle_sorter.cu  oppic_cuda.cpp  oppic_cuda.cu  particle_sorter.cu
lib_oppic/src/hip/: opp_hip.cpp  opp_hip_halo.cpp  opp_hip_kernels.cpp  opp_increase_part_count.cpp  opp_particle_comm.cpp  opp_particle_sorter.cpp  oppic_hip.cpp  particle_sorter.cpp
lib_oppic/src/mpi/: opp_mpi.cpp  opp_mpi_core.cpp  opp_mpi_double_ind_reducs.cpp  opp_mpi_halo.cpp  opp_mpi_halo_core.cpp  opp_mpi_particle_comm.cpp  opp_mpi_partition.cpp  opp_mpi_utils.cpp
lib_oppic/src/omp/: oppic_omp.cpp
lib_oppic/src/seq/: oppic_seq.cpp
opp_lib/: CMakeLists.txt  Makefile  README.md  xxy
opp_lib/include/: opp_cluster.h  opp_cuda.h  opp_defs.h  opp_direct_hop_core.h  opp_hdf5.h  opp_hip.h  opp_lib.h  opp_lib_core.h  opp_mpi.h  opp_mpi_core.h  opp_mpi_defs.h  opp_omp.h  opp_params.h  opp_profiler.h  opp_seq.h  opp_sycl.h  opp_templates.h  opp_util.h
opp_lib/include/device_kernels/: cuda_inline_kernels.h  hip_inline_kernels.h  sycl_inline_kernels.h
opp_lib/src/: opp_direct_hop_core.cpp
opp_lib/src/core/: opp_direct_hop_core.cpp  opp_increase_part_count_core.cpp  opp_lib_core.cpp  opp_lib_file_core.cpp  opp_params.cpp  opp_particle_organize_core.cpp  opp_util.cpp
opp_lib/src/cuda/: opp_cuda.cu  opp_cuda_halo.cu  opp_cuda_helper_kernels.cu  opp_cuda_kernels.cu  opp_cuda_utils.cu  opp_direct_hop_cuda.cu  opp_increase_part_count.cu  opp_particle_comm.cu  opp_particle_sorter.cu
opp_lib/src/hdf5/: opp_hdf5_common.cpp  opp_mpi_hdf5.cpp
opp_lib/src/hip/: opp_direct_hop_hip.cpp  opp_hip.cpp  opp_hip_halo.cpp  opp_hip_helper_kernels.cpp  opp_hip_kernels.cpp  opp_hip_utils.cpp  opp_increase_part_count.cpp  opp_particle_comm.cpp  opp_particle_sorter.cpp
opp_lib/src/mpi/: opp_direct_hop_mpi.cpp  opp_increase_part_count.cpp  opp_mpi.cpp  opp_mpi_core.cpp  opp_mpi_double_ind_reducs.cpp  opp_mpi_halo.cpp  opp_mpi_halo_core.cpp  opp_mpi_particle_comm.cpp  opp_mpi_partition.cpp  opp_mpi_utils.cpp  opp_particle_mover.cpp
opp_lib/src/omp/: opp_direct_hop_omp.cpp  opp_increase_part_count.cpp  opp_omp.cpp  opp_particle_mover.cpp
opp_lib/src/seq/: opp_direct_hop_seq.cpp  opp_increase_part_count.cpp  opp_particle_mover.cpp  opp_seq.cpp
opp_lib/src/sycl/: opp_cuda.dp.cpp  opp_cuda_halo.dp.cpp  opp_cuda_kernels.dp.cpp  opp_direct_hop_sycl.cpp  opp_increase_part_count.cpp  opp_increase_part_count.dp.cpp  opp_particle_comm.dp.cpp  opp_particle_mover.cpp  opp_particle_organize.cpp  opp_particle_sorter.dp.cpp  opp_sycl.cpp  opp_sycl_halo.cpp  opp_sycl_helper_kernels.cpp  opp_sycl_utils.cpp
(+788 files in other folders)
